tests/specs/ecosystem/std/testing/0_214_0.test
std/testing/0.214.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/async@^0.214.0": "jsr:@std/async@0.214.0"
    },
    "jsr": {
      "@std/async@0.214.0": {
        "integrity": "9543c7c3ffe9205902b68f9cbafeaed190d5f46a88fdd8ee500597d1239140e9"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:582:11
    | 
582 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
584 |   return it({
    | ^^^^^^^^^^^^^
585 |     ...options,
    | ^^^^^^^^^^^^^^^
586 |     only: true,
    | ^^^^^^^^^^^^^^^
587 |   });
    | ^^^^^
588 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:590:13
    | 
590 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
592 |   return it({
    | ^^^^^^^^^^^^^
593 |     ...options,
    | ^^^^^^^^^^^^^^^
594 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
595 |   });
    | ^^^^^
596 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'it.ignore'
   --> /bdd.ts:598:14
    | 
598 | it.skip = it.ignore;
    |              ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'describe.ignore'
   --> /bdd.ts:820:26
    | 
820 | describe.skip = describe.ignore;
    |                          ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:582:11
    | 
582 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
584 |   return it({
    | ^^^^^^^^^^^^^
585 |     ...options,
    | ^^^^^^^^^^^^^^^
586 |     only: true,
    | ^^^^^^^^^^^^^^^
587 |   });
    | ^^^^^
588 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:590:13
    | 
590 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
592 |   return it({
    | ^^^^^^^^^^^^^
593 |     ...options,
    | ^^^^^^^^^^^^^^^
594 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
595 |   });
    | ^^^^^
596 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'it.ignore'
   --> /bdd.ts:598:14
    | 
598 | it.skip = it.ignore;
    |              ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'describe.ignore'
   --> /bdd.ts:820:26
    | 
820 | describe.skip = describe.ignore;
    |                          ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:582:11
    | 
582 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
584 |   return it({
    | ^^^^^^^^^^^^^
585 |     ...options,
    | ^^^^^^^^^^^^^^^
586 |     only: true,
    | ^^^^^^^^^^^^^^^
587 |   });
    | ^^^^^
588 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:590:13
    | 
590 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
592 |   return it({
    | ^^^^^^^^^^^^^
593 |     ...options,
    | ^^^^^^^^^^^^^^^
594 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
595 |   });
    | ^^^^^
596 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'it.ignore'
   --> /bdd.ts:598:14
    | 
598 | it.skip = it.ignore;
    |              ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'describe.ignore'
   --> /bdd.ts:820:26
    | 
820 | describe.skip = describe.ignore;
    |                          ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:582:11
    | 
582 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
584 |   return it({
    | ^^^^^^^^^^^^^
585 |     ...options,
    | ^^^^^^^^^^^^^^^
586 |     only: true,
    | ^^^^^^^^^^^^^^^
587 |   });
    | ^^^^^
588 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:590:13
    | 
590 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
592 |   return it({
    | ^^^^^^^^^^^^^
593 |     ...options,
    | ^^^^^^^^^^^^^^^
594 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
595 |   });
    | ^^^^^
596 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'it.ignore'
   --> /bdd.ts:598:14
    | 
598 | it.skip = it.ignore;
    |              ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'describe.ignore'
   --> /bdd.ts:820:26
    | 
820 | describe.skip = describe.ignore;
    |                          ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:582:11
    | 
582 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
584 |   return it({
    | ^^^^^^^^^^^^^
585 |     ...options,
    | ^^^^^^^^^^^^^^^
586 |     only: true,
    | ^^^^^^^^^^^^^^^
587 |   });
    | ^^^^^
588 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:590:13
    | 
590 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
592 |   return it({
    | ^^^^^^^^^^^^^
593 |     ...options,
    | ^^^^^^^^^^^^^^^
594 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
595 |   });
    | ^^^^^
596 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'it.ignore'
   --> /bdd.ts:598:14
    | 
598 | it.skip = it.ignore;
    |              ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'describe.ignore'
   --> /bdd.ts:820:26
    | 
820 | describe.skip = describe.ignore;
    |                          ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:582:11
    | 
582 | it.only = function itOnly<T>(...args: ItArgs<T>) {
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
583 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
584 |   return it({
    | ^^^^^^^^^^^^^
585 |     ...options,
    | ^^^^^^^^^^^^^^^
586 |     only: true,
    | ^^^^^^^^^^^^^^^
587 |   });
    | ^^^^^
588 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /bdd.ts:590:13
    | 
590 | it.ignore = function itIgnore<T>(...args: ItArgs<T>) {
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
591 |   const options = itDefinition(...args);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
592 |   return it({
    | ^^^^^^^^^^^^^
593 |     ...options,
    | ^^^^^^^^^^^^^^^
594 |     ignore: true,
    | ^^^^^^^^^^^^^^^^^
595 |   });
    | ^^^^^
596 | };
    | ^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'it.ignore'
   --> /bdd.ts:598:14
    | 
598 | it.skip = it.ignore;
    |              ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


error[unsupported-expando-property]: expando property referencing 'ignore' conflicts with 'describe.ignore'
   --> /bdd.ts:820:26
    | 
820 | describe.skip = describe.ignore;
    |                          ^^^^^^
    = hint: rename 'ignore' to something else to avoid conflicts or create a temporary variable with a different name to use in the expando property reference

  info: expando properties get converted to a namespace and the reference conflicts with a namespace export
  docs: https://jsr.io/go/slow-type-unsupported-expando-property


